# osw

./: CMakeLists.txt  COPYING  config.cmake.in  kconfig  makefile
include/libosw/: mutex.h  semaphore.h  thread.h
include/libosw/helpers/: serial_stream.h  udp_stream.h
include/osw/: mutex.h  semaphore.h  thread.h
include/osw/generic/: semaphore.h
include/osw/helpers/: serial_stream.h  udp_stream.h
include/osw/linux/: mutex.h  semaphore.h  thread.h
libosw/: CMakeLists.txt  makefile
libosw/linux/: CMakeLists.txt  mutex.c  semaphore.c  thread.c
libosw/linux/helpers/: serial_stream.c  udp_stream.c
sources/: CMakeLists.txt
sources/generic/: semaphore.c
sources/linux/: CMakeLists.txt  mutex.c  semaphore.c  thread.c
